--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/udcore"]
 	path = external/udcore
-	url = git@github.com:Euclideon/udcore.git
+	url = ../../Euclideon/udcore.git
